--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -1,5 +1,11 @@
 * 
   box-sizing: border-box
+
+header
+  background: url(../img/Background-Image.jpg) center no-repeat
+  background-size: cover
+  height: 700px
+  width: 100%
 .conteiner 
   max-width: 940px
   margin: auto 
