--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -7,6 +7,12 @@ header
   height: 700px
   width: 100%
 .conteiner 
-  max-width: 940px
-  margin: auto 
+  max-width: 1030px
+  margin: 0 auto 
+
+@media (max-width: 992)
+  .conteiner
+    max-width: 960px
+
+
 
