--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -2,3 +2,12 @@ body
   +Regular
 
 
+.button
+  display: block
+  background: #fed136
+  border: none
+  &-a
+    color: #ffffff
+    text-decoration: none
+    text-transform: uppercase
+    +Bold
